<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Temperature Converter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <color name="myColor">#F5F5F5</color>
    <string name="celsius">to Celsius</string>
    <string name="fahrenheit">to Fahrenheit</string>
    <string name="kelvin">to Kelvin</string>
    <string name="calc">Calculate</string>
    <string name="clear">Clear All</string>
    <string name="exit">Quit</string>
    <string name="dCelsius">\u2103</string>
    <string name="dFahrenheit">\u2109</string>
    <string name="dKelvin">K</string>
    <string name="N1">1</string>
    <string name="N2">2</string>
    <string name="N3">3</string>
    <string name="N4">4</string>
    <string name="N5">5</string>
    <string name="N6">6</string>
    <string name="N7">7</string>
    <string name="N8">8</string>
    <string name="N9">9</string>
    <string name="N0">0</string>
    <string name="delete">Del</string>
    <string-array name="spinnerItems">
        <item >@string/dFahrenheit</item>
        <item >@string/dCelsius</item>
        <item >@string/dKelvin</item>
        <item ></item>
    </string-array>

</resources>
