<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/textField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" />

    <RadioGroup
        android:id="@+id/temp_radios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textField"
        android:layout_below="@+id/textField" >

        <RadioButton
            android:id="@+id/cRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioClicked"
            android:text="@string/celsius" />

        <RadioButton
            android:id="@+id/fRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioClicked"
            android:text="@string/fahrenheit" />
        
        <RadioButton
            android:id="@+id/kRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioClicked"
            android:text="@string/kelvin" />
        
    </RadioGroup>

    

    <Spinner
        android:id="@+id/temp_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textField"
        android:layout_marginRight="25dp"
        android:layout_toRightOf="@+id/textField"
        android:entries="@array/spinnerItems" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:onClick="onClick"
        android:text="@string/N3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_toLeftOf="@+id/button2"
        android:onClick="onClick"
        android:text="@string/N4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_toLeftOf="@+id/button5"
        android:onClick="onClick"
        android:text="@string/N7" />
    
    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button9"
        android:layout_alignBottom="@+id/button9"
        android:layout_toLeftOf="@+id/button9"
        android:onClick="onClick"
        android:text="@string/N8" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button6"
        android:layout_below="@+id/button6"
        android:onClick="onClick"
        android:text="@string/N9" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button7"
        android:layout_below="@+id/button9"
        android:layout_toLeftOf="@+id/button9"
        android:onClick="onClick"
        android:text="@string/N0" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/temp_radios"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/temp_selection"
        android:onClick="onClick"
        android:text="@string/clear" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button9"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/N5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button7"
        android:layout_toRightOf="@+id/button5"
        android:onClick="onClick"
        android:text="@string/N6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button5"
        android:layout_toRightOf="@+id/button7"
        android:onClick="onClick"
        android:text="@string/N2" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clear"
        android:layout_alignLeft="@+id/clear"
        android:layout_alignRight="@+id/temp_selection"
        android:onClick="onClick" 
        android:text="@string/calc" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_below="@+id/temp_radios"
        android:onClick="onClick"
        android:text="@string/N1" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button0"
        android:layout_alignRight="@+id/button9"
        android:layout_alignTop="@+id/button0"
        android:layout_toRightOf="@+id/button0"
        android:onClick="onClick"
        android:text="@string/delete" />

</RelativeLayout>